--- a/back/readme
+++ b/back/readme
@@ -2,7 +2,7 @@
 PORT=3000
 MONGO_URI=mongodb://192.168.XX.XXX:27017/studywithme
 
-EMAIL_USER=lkhpp3370@gmail.com
+EMAIL_USER=이메일
 EMAIL_PASS=앱비밀번호
 
 .gitignore
