--- a/back/readme
+++ b/back/readme
@@ -1,9 +1,6 @@
 .env
 PORT=3000
-MONGO_URI=mongodb://192.168.00.000:27017/studywithme
-
-EMAIL_USER=이메일
-EMAIL_PASS=16자라
+MONGO_URI=mongodb://192.168.XX.XXX:27017/studywithme
 
 .gitignore
 아직 내용없음
