--- a/front/readme
+++ b/front/readme
@@ -1,12 +1,6 @@
 .env 파일
-BACKEND_URL=http://192.168.XX.XXX:3000
-
-# 배포용 백엔드 API 주소 (도메인 기반)
-BACKEND_URL=https://api.studywithme.com
-
-# Kakao JS 키 (웹뷰에서 카카오 맵 띄울 때 사용)
-KAKAO_JS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
+BACKEND_URL=https://study-with-me-h3q7.onrender.com
+KAKAO_JS_KEY=8735db830fce16c65a56a48c7907c10c
 
 
 .gitignore
